--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -11,6 +11,10 @@
     justify-content: space-between;
 }
 
+.footer-top-left img{
+    width: 10rem;
+}
+
 .footer-top-left p{
     font-size: 20px;
     max-width: 400px;
