--- a/src/Components/MyServices/myService.css
+++ b/src/Components/MyServices/myService.css
@@ -107,7 +107,8 @@
 
   .services-heading {
     font-size: 2rem; 
-    margin-left: 6rem;
+    margin: 0 auto;
+    margin-left: 8.07rem;
     text-align: center;
     margin-bottom: 0.2rem; 
     color: rgb(255, 255, 255);
@@ -154,9 +155,38 @@
   }
 }
 
-@media (max-width: 490px){
-  .service-card{
+@media (max-width: 490px) {
+
+  .services-heading{
+    margin-left: 4rem;
+  }
+
+  .service-card {
     height: 380px;
-    width: 160px;
+    width: 155px;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    margin-left: -9px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    box-sizing: border-box;
+  }
+
+  .service-title {
+    font-size: 1.2rem;
+    margin-bottom: 0.8rem;
+  }
+
+  .service-description {
+    font-size: 0.9rem;
+    line-height: 1.3;
+    margin-bottom: 1rem;
+  }
+
+  .readMore {
+    font-size: 0.8rem;
+    margin-top: auto;
   }
 }
