--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -49,6 +49,9 @@
     .navbar{
         margin: 20px 40px;
     }
+    .tag{
+        width: 7rem;
+    }
     .nav-connect{
         display: none;
     }
